<resources>
    <string name="app_name">Bingo</string>
    <string name="about_game">About Game</string>
    <string name="saurav_bhargava">Saurav Bhargava</string>
    <string name="version">version</string>
    <string name="version_comes_here">version comes here</string>
    <string name="developers">Developers</string>
    <string name="himanshu_bhargava">Himanshu Bhargava</string>
    <string name="your_name">Your Name</string>
    <string name="save_name">SAVE NAME</string>
    <string name="check_stats">CHECK STATS</string>
    <string name="create_new_room">Create new Room</string>
    <string name="enter_room_id">Enter Room Id</string>
    <string name="join_room">JOIN ROOM</string>
    <string name="about">About</string>
    <string name="total_game_played">Total Game Played</string>
    <string name="won">" Won!!"</string>
    <string name="lost">" Lost!!"</string>
    <string name="win">Won</string>
    <string name="lose">Lost</string>
    <string name="room">Room</string>
    <string name="players">Players</string>
    <string name="winner">Winner</string>
    <string name="time">Time</string>
    <string name="game_statistics">Game Statistics</string>
    <string name="please_select_type_of_n_grid_for_bingo">Please select type of \n grid for Bingo</string>
    <string name="tap_anywhere_to_go_back">Tap anywhere to go back</string>
    <string name="custom">Custom</string>
    <string name="random">Random</string>
    <string name="simple">Simple</string>
    <string name="start_game">Start Game</string>
    <string name="join_game">Join Game</string>
    <string name="please_enter_name">"Please enter your name first"</string>
    <string name="Please_enter_name_greater_than_1">[Please enter a name with length > 1]</string>
    <string name="saved_your_name">Saved your name!</string>
    <string name="please_enter_room_id">Please enter a room id!!!</string>
    <string name="room_creation_in_progress">Room creation in progress!</string>
    <string name="room_share_message_format">Click %s%s to join!\nOr enter: %s to join the room</string>
    <string name="room_id">"Room: "</string>
    <string name="share">" share?"</string>
    <string name="click_to_join_bingo">Click to join bingo:</string>
    <string name="share_via">Share via</string>
    <string name="invalid_room_id">Invalid room id!!!</string>
    <string name="wait_for_others_to_join">Wait for others to join!!</string>
    <string name="you_cannot_play_turn_now">You cannot play turn now!</string>
    <string name="could_not_create_room_try_later">Could not create the room please try again later!!!</string>
    <string name="could_not_join_room">Could not join the room!</string>
    <string name="game_joined_successfully">Game joined successfully</string>
    <string name="game_started">Game started!!!</string>
    <string name="could_not_start_game">Could not start the game!</string>
    <string name="tap_to_go_back">Tap anywhere to go back</string>
    <string name="do_you_want_to_exit">Do you want to Exit?</string>
    <string name="you">You</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>