<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstScreen">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFC107"
        android:backgroundTint="#04131C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/myNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="9dp"
                android:layout_marginRight="9dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:outlineProvider="none"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rectangle_button"
                android:backgroundTint="#00BCD4"
                android:onClick="submitUserName"
                android:shadowColor="#834444"
                android:soundEffectsEnabled="true"
                android:text="@string/save_name"
                android:textColor="#D3AEAE"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/checkStatButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rectangle_button"
                android:backgroundTint="#00BCD4"
                android:onClick="launchStatActivity"
                android:shadowColor="#834444"
                android:soundEffectsEnabled="true"
                android:text="@string/check_stats"
                android:textColor="#D3AEAE"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/createRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rectangle_button"
                android:backgroundTint="#8996B5"
                android:backgroundTintMode="multiply"
                android:onClick="createRoom"
                android:text="@string/create_new_room"
                android:textColor="#D3AEAE"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/roomId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="100dp"
                android:ems="10"
                android:hint="@string/enter_room_id"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="#F3FFFFFF"
                android:textColorHint="#FFFFFF" />

            <Button
                android:id="@+id/joinRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rectangle_button"
                android:backgroundTint="#A2B2D6"
                android:backgroundTintMode="multiply"
                android:onClick="joinRoom"
                android:text="@string/join_room"
                android:textColor="#D3AEAE"
                android:textColorHighlight="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

    </TableRow>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchAboutActivity"
        android:text="@string/about"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#72A5FB"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>